--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="list-header">
     <h1>Welcome to my list of game notes and reviews</h1>
-    <form action="/0">
+    <form action="/addGame">
         <button class="header-button" type="submit">+</button>
     </form>
 </div>
