--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,6 +8,10 @@ html {
     flex-direction: column;
 }
 
+input {
+    color: black;
+}
+
 .game-container {
     display: flex;
     flex-direction: column;
